--- a/Untitled-Copy1.ipynb
+++ b/Untitled-Copy1.ipynb
@@ -46,32 +46,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "bff5dfe6-08c2-48ad-9525-be462e753896",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['A' 'B' 'C' 'D' 'del' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L' 'M' 'N' 'nothing'\n",
-      " 'O' 'P' 'Q' 'R' 'S' 'space' 'T' 'U' 'V' 'W' 'X' 'Y' 'Z']\n"
-     ]
-    }
-   ],
-   "source": [
-    "TRAIN_DIR = \"./asl_alphabet/asl_alphabet_train/\"\n",
-    "\n",
-    "labels = []\n",
-    "for folder in os.listdir(\"./\" + TRAIN_DIR):\n",
-    "    labels.append(folder)\n",
-    "\n",
-    "label_list = np.array(labels)\n",
-    "print(label_list)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "730bf66e-17c8-408f-9698-297df8f3f21a",
    "metadata": {},
@@ -107,21 +81,392 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca03aa51-84b0-41c7-b0b5-57d372ea39c6",
+   "id": "379bb1f9-61a0-41b5-bf6b-7aae94944af7",
    "metadata": {},
    "source": [
-    "## Predict"
+    "## Prepare Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
+   "id": "bff5dfe6-08c2-48ad-9525-be462e753896",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A' 'B' 'C' 'D' 'del' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L' 'M' 'N' 'nothing'\n",
+      " 'O' 'P' 'Q' 'R' 'S' 'space' 'T' 'U' 'V' 'W' 'X' 'Y' 'Z']\n"
+     ]
+    }
+   ],
+   "source": [
+    "TRAIN_DIR = \"./asl_alphabet/asl_alphabet_train/\"\n",
+    "NEW_TRAIN_DIR = \"./asl_alphabet/new_training\"\n",
+    "IMG_SIZE = 64\n",
+    "\n",
+    "labels = []\n",
+    "for folder in os.listdir(\"./\" + TRAIN_DIR):\n",
+    "    labels.append(folder)\n",
+    "\n",
+    "label_list = np.array(labels)\n",
+    "print(label_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9ea718b6-4790-4523-bc28-f133f186fdf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>img</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>A</td>\n",
+       "      <td>./asl_alphabet/new_training/A/IMG_20240411_194...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label                                                img\n",
+       "0      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "1      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "2      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "3      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "4      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "5      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "6      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "7      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "8      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "9      A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "10     A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "11     A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "12     A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "13     A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "14     A  ./asl_alphabet/new_training/A/IMG_20240411_194...\n",
+       "15     A  ./asl_alphabet/new_training/A/IMG_20240411_194..."
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path_list = []\n",
+    "label_list = []\n",
+    "\n",
+    "for label in labels:\n",
+    "    label_path = os.path.join(NEW_TRAIN_DIR, label, \"*\")\n",
+    "    \n",
+    "    img_files = glob.glob(label_path)\n",
+    "    img_files = [file.replace(\"\\\\\", \"/\") for file in img_files]\n",
+    "    img_labels = [label] * len(img_files)\n",
+    "\n",
+    "    path_list.extend(img_files)\n",
+    "    label_list.extend(img_labels)\n",
+    "\n",
+    "dataset = pd.DataFrame({\n",
+    "    \"label\": label_list,\n",
+    "    \"img\": path_list\n",
+    "})\n",
+    "\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a63b9f8-d2dd-4a7e-ba21-f018ed1fb5e0",
+   "metadata": {},
+   "source": [
+    "## Split Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1465f21b-f8ba-431e-afb3-b58a61346080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    dataset[\"img\"],\n",
+    "    dataset[\"label\"],\n",
+    "    test_size=0.25,\n",
+    "    shuffle=True,\n",
+    "    stratify=dataset[\"label\"]\n",
+    ")\n",
+    "\n",
+    "data_train = pd.DataFrame({\n",
+    "    \"label\": y_train,\n",
+    "    \"img\": X_train\n",
+    "})\n",
+    "\n",
+    "data_test = pd.DataFrame({\n",
+    "    \"label\": y_test,\n",
+    "    \"img\": X_test\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dc7ba420-6354-47fb-8d59-9f4ad9df9c63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 12 validated image filenames belonging to 1 classes.\n",
+      "Found 4 validated image filenames belonging to 1 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "datagen = ImageDataGenerator(rescale=1/255)\n",
+    "\n",
+    "train_set = datagen.flow_from_dataframe(\n",
+    "    data_train,\n",
+    "    directory=\"./\",\n",
+    "    x_col=\"img\",\n",
+    "    y_col=\"label\",\n",
+    "    class_mode=\"categorical\",\n",
+    "    batch_size=64,\n",
+    "    target_size=(IMG_SIZE, IMG_SIZE),\n",
+    ")\n",
+    "\n",
+    "test_set = datagen.flow_from_dataframe(\n",
+    "    data_test,\n",
+    "    directory=\"./\",\n",
+    "    x_col=\"img\",\n",
+    "    y_col=\"label\",\n",
+    "    class_mode=\"categorical\",\n",
+    "    batch_size=1,\n",
+    "    target_size=(IMG_SIZE, IMG_SIZE),\n",
+    "    shuffle=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cac7df7-1b37-4262-ba5d-4165fcdc0f28",
+   "metadata": {},
+   "source": [
+    "## Pre-load Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "cba07207-9331-4e81-9252-4eb8232f0118",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Confusion Matrix\n",
     "model = load_model(\"./ASL_VGG16_CP.h5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59c7f121-d2be-448f-aa04-8f155a3289f3",
+   "metadata": {},
+   "source": [
+    "## Fit Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c08db950-2907-433f-8dec-874337c0b3c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1/1 [==============================] - ETA: 0s - loss: 758.3299 - accuracy: 0.0000e+00"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\envs\\sc4031\\lib\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 5s 5s/step - loss: 758.3299 - accuracy: 0.0000e+00 - val_loss: 491.0953 - val_accuracy: 0.0000e+00\n",
+      "Epoch 2/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 689.2805 - accuracy: 0.0000e+00 - val_loss: 393.9509 - val_accuracy: 0.0000e+00\n",
+      "Epoch 3/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 497.7156 - accuracy: 0.0833 - val_loss: 315.6708 - val_accuracy: 0.0000e+00\n",
+      "Epoch 4/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 384.9564 - accuracy: 0.0000e+00 - val_loss: 253.6616 - val_accuracy: 0.0000e+00\n",
+      "Epoch 5/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 342.8867 - accuracy: 0.0833 - val_loss: 209.0825 - val_accuracy: 0.0000e+00\n",
+      "Epoch 6/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 267.9388 - accuracy: 0.2500 - val_loss: 182.0094 - val_accuracy: 0.0000e+00\n",
+      "Epoch 7/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 268.1945 - accuracy: 0.0833 - val_loss: 163.3942 - val_accuracy: 0.0000e+00\n",
+      "Epoch 8/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 277.4685 - accuracy: 0.2500 - val_loss: 148.9162 - val_accuracy: 0.0000e+00\n",
+      "Epoch 9/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 212.4698 - accuracy: 0.0833 - val_loss: 138.7841 - val_accuracy: 0.0000e+00\n",
+      "Epoch 10/10\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 228.1518 - accuracy: 0.1667 - val_loss: 130.9489 - val_accuracy: 0.0000e+00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x29e45dedf40>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimizer = Adam()\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "checkpoint = ModelCheckpoint('ASL_VGG16_CP_7.50.h5', save_best_only=True, monitor='val_accuracy', mode='max')\n",
+    "\n",
+    "model.fit(\n",
+    "    train_set,\n",
+    "    epochs=10,\n",
+    "    validation_data=test_set,\n",
+    "    verbose=1,\n",
+    "    callbacks=[checkpoint]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fb078c4d-c66a-4d79-822b-ebb30f5e7120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"new_model_test_A.h5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca03aa51-84b0-41c7-b0b5-57d372ea39c6",
+   "metadata": {},
+   "source": [
+    "## Predict with Webcam"
    ]
   },
   {
