--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 201,
    "id": "f9b7957e-55a7-4344-995f-979a48c12997",
    "metadata": {},
    "outputs": [],
@@ -853,6 +853,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74670bc5-f17c-4167-a410-64d55364fcd5",
+   "metadata": {},
+   "source": [
+    "## Save Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "d97477d5-f3e5-4426-9800-79ce888ea6ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"./sc4031_asl_model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a533f8ae-6ac9-434b-ab95-e35bcd13bf4d",
    "metadata": {},
    "source": [
@@ -887,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 203,
    "id": "4505f2e1-871c-4e74-9b08-d64e4a351734",
    "metadata": {},
    "outputs": [
@@ -895,7 +913,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 48ms/step\n",
+      "1/1 [==============================] - 0s 218ms/step\n",
       "Predicted label: P\n"
      ]
     }
@@ -904,7 +922,7 @@
     "test_img_path = \"./asl_alphabet/asl_alphabet_test/R_test.jpg\"\n",
     "\n",
     "# Preprocess the image\n",
-    "preprocessed_img = preprocess_image(test_img_path, (IMG_SIZE, IMG_SIZE))\n",
+    "preprocessed_img = preprocess_image(test_img_path)\n",
     "\n",
     "# Predict on the preprocessed image\n",
     "predictions = model.predict(preprocessed_img)\n",
